# constella-refactor

./: README.md
agent-playground/: README.md
agent-playground/backend/: .env.example  README.md  package.json
agent-playground/backend/prisma/: schema.prisma
agent-playground/backend/src/: config.ts  index.ts
agent-playground/frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
backend/: .env.example  README.md  package.json  pnpm-lock.yaml
backend/prisma/: schema.prisma
backend/src/: config.ts  index.ts  utils.ts
backend/src/handlers/: authHandlers.ts  verifyHandlers.ts  walletHandlers.ts
docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sidebars.ts
docs/docs/: intro.md  tlsn-notary.md
frontend/: README.md  package.json  pnpm-lock.yaml
nitro-verifier/: .gitignore  README.md
nitro-verifier/nodejs/: main.js  package-lock.json  package.json
nitro-verifier/rust/: Cargo.toml
nitro-verifier/verifier-frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
nitro-verifier/verifier-js/: nitro_attestation_verifier.d.ts  nitro_attestation_verifier.js  nitro_attestation_verifier_bg.wasm  nitro_attestation_verifier_bg.wasm.d.ts
openai-tlsn-attestation/: Cargo.toml  README.md
openai-tlsn-attestation/src/: main.rs
openai-tlsn-verifier/: .gitignore  Cargo.toml  README.md
openai-tlsn-verifier/src/: main.rs
scripts/: aws-ec2-create.md  backend-setup.md  init-ec2-instance.md  init-tee-verifier.md  notary-server-setup.md
tlsn-attestation/src/: main.rs  storage.rs
(+89 files in other folders)
