[package]
name = "openai-tlsn-attestation"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3"
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.31"
hex = "0.4.3"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.11", features = ["full"] }
k256 = { version = "0.13.4", features = ["ecdsa"] }
notary-client = { git = "https://github.com/tlsnotary/tlsn", version = "0.1.0-alpha.10" }
rangeset = "0.2.0"
serde_json = "1.0.140"
tlsn-common = { git = "https://github.com/tlsnotary/tlsn", version = "0.1.0-alpha.10" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", version = "0.1.0-alpha.10" }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", version = "0.1.0-alpha.10" }
tokio = { version = "1.44.2", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-std",
  "fs",
] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
